remove fix attempt on safari print version

--- a/web/app/themes/Foody/resources/sass/pages/recipe/_recipe-new.scss
+++ b/web/app/themes/Foody/resources/sass/pages/recipe/_recipe-new.scss
@@ -3296,10 +3296,6 @@ $content-width: 95%;
       display: block;
     }
 
-    section{
-      page-break-before: always;
-    }
-
     .print-desktop{
       display: block;
     }
